--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "@sanity/block-content-to-markdown": "^0.0.5",
     "@sanity/client": "^1.149.2",
     "@sanity/image-url": "^0.140.17",
